--- a/src/Components/CssFiles/OurProducts.css
+++ b/src/Components/CssFiles/OurProducts.css
@@ -60,3 +60,10 @@
     color: white;
     transform: rotateY(180deg);
   }
+  @media screen and (max-width: 992px) {
+    #products_list_decoration{
+      display: grid;
+      grid-template-columns: auto;
+      justify-content: space-evenly;
+   }
+   }
