--- a/src/Components/CssFiles/AdministrationEventsManagement.css
+++ b/src/Components/CssFiles/AdministrationEventsManagement.css
@@ -22,3 +22,11 @@
     width: 30%;
     border-radius: 10px;
   }
+  @media screen and (max-width: 992px) {
+    .events_list_decoration{
+      margin: 1% 1%;
+      display: grid;
+      grid-gap: 15px 15px;
+      grid-template-columns: auto;
+    }
+   }
