--- a/src/Components/CssFiles/Event.css
+++ b/src/Components/CssFiles/Event.css
@@ -22,4 +22,10 @@
     width: 30%;
     border-radius: 10px;
   }
-  
+  @media screen and (max-width: 1000px) {
+    .eventss_list_decoration{
+      display: grid;
+      grid-gap: 15px 15px;
+      grid-template-columns: auto;
+    }
+  }
